Restructure project, implement article references

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :url %>
     <%= f.text_field :url %>
-  </div>
+  </div> -->
 
   <div class="actions">
     <%= f.submit %>
