--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(article) do |f| %>
+<%= form_for(article, :url => '/' + @page.id.to_s + '/articles') do |f| %>
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -22,18 +22,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :string %>
-    <%= f.text_field :string %>
-  </div>
-
-  <div class="field">
     <%= f.label :journal %>
     <%= f.text_field :journal %>
-  </div>
-
-  <div class="field">
-    <%= f.label : %>
-    <%= f.text_field : %>
   </div>
 
   <div class="field">
@@ -69,11 +59,6 @@
   <div class="field">
     <%= f.label :note %>
     <%= f.text_field :note %>
-  </div>
-
-  <div class="field">
-    <%= f.label :page_id %>
-    <%= f.number_field :page_id %>
   </div>
 
   <div class="actions">
