--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(article, :url => '/' + @page.id.to_s + '/articles') do |f| %>
+<%= form_for(article, :url => '/' + @page.id.to_s + '/articles/' + article.id.to_s) do |f| %>
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
