--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,23 +4,21 @@
   <strong>Url:</strong>
   <%= @page.url %>
 </p> -->
-
+<h2>Articles</h2>
 <table class="table table-hover">
   <thead>
-	<tr>
-	  <th> Author  </th>
-  	  <th> Title  </th>
-	</tr>
+    <% Article.rendered_fields.each do |f| %>
+      <td><b><%=f %></b></td>
+    <% end %>
   </thead>
-
-  <tbody>
-	<% @page.get_references.each do |ref| %>
-	  <tr>
-		<td><%= ref.author %> </td>
-  		<td><%= ref.title %> </td>
-	  </tr>
-	<% end %>
-  </tbody>
+  <% @page.get_articles.each do |article| %>
+    <tr>
+      <% Article.rendered_fields.each do |f| %>
+        <td><%= article.send(f) %></td>
+      <% end %>
+      <td><%= link_to 'Edit', '/' + @page.id.to_s + '/articles/' + article.id.to_s %></td>
+    </tr>
+  <% end %>
 </table>
 
 
