--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -26,6 +26,8 @@
 
 <%= link_to 'Create new article reference', '/' + @page.id.to_s + '/new/article'  %>
 
+<%= link_to 'Back', '/' %>
+
 <br> <br> <br> <br> <br>
 <h4> OUTPUT BIBTEX </h4>
 
