Implement export button (#23)

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -25,10 +25,10 @@
 
 
 <%= link_to 'Create new article reference', '/' + @page.id.to_s + '/new/article'  %>
-
 <%= link_to 'Back', '/' %>
 
 <br> <br> <br> <br> <br>
-<h4> OUTPUT BIBTEX </h4>
+
+<h4> OUTPUT BIBTEX <h4 style="font-weight: bold">  <%= link_to 'Download', '/' + @page.id.to_s + '/export'  %> </h4> </h4>
 
 <textarea rows=30 cols=50 readonly><%= @page.to_bibtex %></textarea>
