--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,3 +1,5 @@
+<h2> Your bibtex is saved to <%= link_to @url %> </a> SAVE THIS URL OR YOU WILL NOT BE ABLE TO ACCESS YOUR WORK </h2>
+
 <p id="notice"><%= notice %></p>
 
 <!-- <p>
@@ -25,6 +27,8 @@
 
 
 <%= link_to 'Create new article reference', '/' + @page.id.to_s + '/new/article'  %>
+
+<br> <br>
 <%= link_to 'Back', '/' %>
 
 <br> <br> <br> <br> <br>
