--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New Page</h1>
+<h2>You can generate a new bibtex document with the button below</h2>
+<h3>If you have old bibtext document that you want to continue working with, please go to the url directly (that you hopefully saved) </h3>
 
 <%= render 'form', page: @page %>
