--- a/app/views/in_proceedings/new.html.erb
+++ b/app/views/in_proceedings/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', in_proceeding: @in_proceeding %>
 
-<%= link_to 'Back', in_proceedings_path %>
+<%= link_to 'Back', '/' + @page.id.to_s %>
