Test book and inproceedings reference creation

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -2,7 +2,7 @@
 <h4><%= link_to 'Back to main page', '/' %></h4>
 <br><br>
 
-<h2 style="margin-bottom: 4px">Articles &nbsp<span style="font-size: 16px"> <%= link_to 'Create new', '/' + @page.id.to_s + '/new/article'  %> </span> </h2>
+<h2 style="margin-bottom: 4px">Articles &nbsp<span class="new-article" style="font-size: 16px"> <%= link_to 'Create new', '/' + @page.id.to_s + '/new/article'  %> </span> </h2>
 
 <br>
 
@@ -24,7 +24,7 @@
 
 <br>
 
-<h2 style="margin-bottom: 4px">Books &nbsp<span style="font-size: 16px"> <%= link_to 'Create new', '/' + @page.id.to_s + '/new/book'  %> </span> </h2>
+<h2 style="margin-bottom: 4px">Books &nbsp<span class="new-book" style="font-size: 16px"> <%= link_to 'Create new', '/' + @page.id.to_s + '/new/book'  %> </span> </h2>
 
 <br>
 
@@ -46,7 +46,7 @@
 
 <br>
 
-<h2 style="margin-bottom: 4px">In-proceedings &nbsp<span style="font-size: 16px"> <%= link_to 'Create new', '/' + @page.id.to_s + '/new/in_proceeding'  %> </span> </h2>
+<h2 style="margin-bottom: 4px">In-proceedings &nbsp<span class="new-in-proceeding" style="font-size: 16px"> <%= link_to 'Create new', '/' + @page.id.to_s + '/new/in_proceeding'  %> </span> </h2>
 
 <br>
 
